# minecraft-clone

./: .gitignore  CMakeLists.txt  README.md
include/: glad.c
include/fast_noise_lite/: fast_noise_lite.hpp
include/glad/: glad.h
include/glm/: geometric.hpp  packing.hpp
include/glm/ext/: matrix_clip_space.hpp  matrix_projection.hpp  matrix_transform.hpp
include/glm/gtc/: matrix_transform.hpp
include/stb_image/: stb_image.h
shader/: frag.glsl  vtx.glsl
src/: atlas.cpp  atlas.hpp  block.hpp  file_manager.cpp  file_manager.hpp  main.cpp  mesh.cpp  mesh.hpp  minecraft.cpp  minecraft.hpp  minecraft_clone.cpp  minecraft_clone.hpp  timer.cpp  timer.hpp  world.cpp  world.hpp
src/components/: CameraComponent.hpp  InputComponent.hpp  RederingComponent.hpp  TransformComponent.hpp
src/systems/: camera_system.cpp  camera_system.hpp  input_system.cpp  input_system.hpp  rendering_system.cpp  rendering_system.hpp  shader.cpp  shader.hpp  system.hpp
src/world/: chunk.cpp  chunk.hpp  chunk_manager.cpp  chunk_manager.hpp  world.cpp  world.hpp
